Support for the modular open/closed modules layout, inspired by Jarda's change.